Fixed filenames, - Updated Template with new Frontmatter Content - Updated xelement/docs/api/animate, with more content

--- a/docs/000.template.md
+++ b/docs/000.template.md
@@ -13,17 +13,20 @@ These pages will have a shared Template, where FrontMatter tags are shared betwe
 
 ## FrontMatter Template
 
-This is the Template that would be placed at the top of the frontmatter of each doc page.
+This is the Template that would be placed at the top of the front-matter of each doc page.
 
 ```astro
 ---
-    Layout:
-    Component_Name:
-    Component_Author:
-    Component_NPM:
-    Page_Title:
-    Page_slug:
-    Page_meta:
-    Page_description:
+title: ""
+meta_title: ""
+description: ""
+meta_description: ""
+order: 0
+next_page: ''
+previous_page: ""
 ---
 ```
+
+## Writing Style
+
+<!-- TODO! fill this bit in at the end, once everything else is written up -->
