Updated Content on Pages

--- a/docs/000.template.md
+++ b/docs/000.template.md
@@ -1,8 +1,7 @@
 # Astro-UI Docs Template
 
-Each Component created within the Astro-ui monorepo needs to have its own accompanying set of documents to provide extra contextual information on
+Each Component created within the Astro-ui monorepo needs to have its own accompanying set of documents to provide extra contextual information on the Component, addressing simple questions such as:
 
-- The Component
 - What it is
 - What it does
 - How it does it
@@ -18,15 +17,96 @@ This is the Template that would be placed at the top of the front-matter of each
 ```astro
 ---
 title: ""
+api_title: ""
 meta_title: ""
-description: ""
+description: "" 
 meta_description: ""
-order: 0
-next_page: ''
+page_number: 0
+next_page: ""
 previous_page: ""
+featured_image: ""
 ---
+
 ```
 
-## Writing Style
+### So many Titles 😱
 
-<!-- TODO! fill this bit in at the end, once everything else is written up -->
+There is a slight method to this madness. The context of each page and their titles really depends on their location within the UI of the site.
+
+Here is an individual explaination of what 'title' does what exactly on the UI.
+
+### `title:string` 
+
+This is the document `<title>`, a long form title that adequately informs of the pages content.
+
+### `api_title:string`
+
+Our `api/` section contains pages with titles like `@do` and `@observers` etc. These are only used within our API section on the UI. This way we can place the methods and their special titles into the `<sidebar>` and `<headings>` of the UI.
+
+### `meta_title:string`
+
+SEO related title for our pages can vary on their content and other SEO factors. To separate this concern from interfering with the visual titles of the page, we have a specialized fields that pertain to helping empower the SEO narrative.
+
+### description:string
+
+This is a long form description of the contents on the page, here we ought to encapsulate in a short abstract of what is on the page, what it seeks to convey and other pertaining unique bits of content that is valuable to the user.
+
+### meta_description:string
+
+This is a shorter more condensed form of the description field, used for empowering the SEO and meta content for the Social headers of the page. There is a limited number of words, ideally no more tha 50 words should be written in this short abstract. 
+
+### page_number:number
+
+Manually determining the order of each page, this would help save of sorting of pages in the UI. This way the determined order of the pages and how they appear is strictly controlled here in the frontmatter of each page.
+
+### next_page:string
+
+A Link to the next page to the current page in question. This is used to inform the `<next>` navigation button of the coming page to load.
+
+### previous_page:string
+
+A Link to the previous page to the current page in question. Again used to inform the `<prev>` page navigation.
+
+### featured_image:string
+
+A Link to a featured image, either located on a CDN or using a hyperlink to an online resource.
+
+
+# Page Title
+
+Lets introduce the content, short and sweet. Only a couple of sentences long.
+
+Next up we seek to build on the previous paragraph by adding some key points of the document. 
+
+## Clear Titles
+
+Titles convey more value than the text that follows.
+
+When using titles to describe sequences of code do so in the following manner:
+
+`property : type `
+
+By displaying the type associated with the property we can inform the reader of the meta information that they need in order to be able to use the property properly and quickly. This helps to reduce the cognitive overhead for our readers
+
+### Code Blocks
+
+Code blocks should be written using the `lang='astro || tsx' ` preference. Since our code examples for XElement would be written in Astro, we leverage Prism in the UI to help provide syntax support.
+
+-----
+ 
+## Articles
+
+Always use `-----` to help break up the page into smaller articles. This segmenting of information allows you to help develop further on concepts and also help maintain readability and structure of the page.
+
+### References
+
+Any Links used to external sources should be suitably linked in the footnotes of the page, here we wish to provide our readers not to link away mid-sentence but to refer them at the end to the resource used in the body of the documentation afterwards.
+
+## Next Steps
+
+Readers need to be told what to do next, it helps prime them as we move between pages,
+Here we begin by concluding what we have achieved on the page, then to inform them of what is coming up in the following page. This way their expectations are set and they are informed before hand.
+
+## Footnotes
+
+Any referenced material used within the page needs to be adequately referenced at the bottom of each page, we would use the APA standard for citations of websites and content material that is placed on the page. Along side any additional authors comments on top of the reference.
