sarah scanned template doc

--- a/docs/000.template.md
+++ b/docs/000.template.md
@@ -12,7 +12,7 @@ These pages will have a shared Template, where FrontMatter tags are shared betwe
 
 ## FrontMatter Template
 
-This is the Template that would be placed at the top of the front-matter of each doc page.
+This is the Template to be placed at the top of the front-matter of each doc page.
 
 ```astro
 ---
@@ -33,35 +33,35 @@ featured_image: ""
 
 There is a slight method to this madness. The context of each page and their titles really depends on their location within the UI of the site.
 
-Here is an individual explaination of what 'title' does what exactly on the UI.
+Here is an individual explaination of what 'title' does exactly on the UI.
 
 ### `title:string` 
 
-This is the document `<title>`, a long form title that adequately informs of the pages content.
+This is the document `<title>`, a long form title that describes the page content.
 
 ### `api_title:string`
 
-Our `api/` section contains pages with titles like `@do` and `@observers` etc. These are only used within our API section on the UI. This way we can place the methods and their special titles into the `<sidebar>` and `<headings>` of the UI.
+Our `api/` section contains pages with titles like `@do` and `@observers` etc. These are only used within our API section on the UI. This way, we can place the methods and their special titles into the `<sidebar>` and `<headings>` of the UI.
 
 ### `meta_title:string`
 
-SEO related title for our pages can vary on their content and other SEO factors. To separate this concern from interfering with the visual titles of the page, we have a specialized fields that pertain to helping empower the SEO narrative.
+The desired SEO optimized title for our pages can vary from the page title. To separate this concern of SEO from interfering with the visual titles of the page, we have a custom field to help empower the SEO narrative.
 
 ### description:string
 
-This is a long form description of the contents on the page, here we ought to encapsulate in a short abstract of what is on the page, what it seeks to convey and other pertaining unique bits of content that is valuable to the user.
+This is a long form description of the contents on the page: a short abstract of what is on the page, what it seeks to convey and other content that is valuable to the user.
 
 ### meta_description:string
 
-This is a shorter more condensed form of the description field, used for empowering the SEO and meta content for the Social headers of the page. There is a limited number of words, ideally no more tha 50 words should be written in this short abstract. 
+This is a shorter more condensed form of the description field, used for SEO and meta content for the Social headers of the page. This is intended to be limited to 50 words or fewer. 
 
 ### page_number:number
 
-Manually determining the order of each page, this would help save of sorting of pages in the UI. This way the determined order of the pages and how they appear is strictly controlled here in the frontmatter of each page.
+This manually controls the order of each page to avoid the need to sort pages in the UI.
 
 ### next_page:string
 
-A Link to the next page to the current page in question. This is used to inform the `<next>` navigation button of the coming page to load.
+A Link to the next page in relation to the current page in question. This is used to inform the `<next>` navigation button of the coming page to load.
 
 ### previous_page:string
 
@@ -69,12 +69,12 @@ A Link to the previous page to the current page in question. Again used to infor
 
 ### featured_image:string
 
-A Link to a featured image, either located on a CDN or using a hyperlink to an online resource.
+A Link to a featured image, located on a CDN or other online resource.
 
 
 # Page Title
 
-Lets introduce the content, short and sweet. Only a couple of sentences long.
+Introduce the content, short and sweet. Only a couple of sentences long at most.
 
 Next up we seek to build on the previous paragraph by adding some key points of the document. 
 
@@ -82,7 +82,7 @@ Next up we seek to build on the previous paragraph by adding some key points of 
 
 Titles convey more value than the text that follows.
 
-When using titles to describe sequences of code do so in the following manner:
+When using titles to describe sequences of code, do so in the following manner:
 
 `property : type `
 
@@ -90,23 +90,23 @@ By displaying the type associated with the property we can inform the reader of 
 
 ### Code Blocks
 
-Code blocks should be written using the `lang='astro || tsx' ` preference. Since our code examples for XElement would be written in Astro, we leverage Prism in the UI to help provide syntax support.
+Code blocks should be written using the `lang='astro || tsx' ` preference. Since our code examples for XElement are be written in Astro, we leverage Prism in the UI to help provide syntax support.
 
 -----
  
 ## Articles
 
-Always use `-----` to help break up the page into smaller articles. This segmenting of information allows you to help develop further on concepts and also help maintain readability and structure of the page.
+Always use `-----` to help break up the page into smaller articles. This segmenting of information allows you to visually organize concepts and to maintain readability and structure of the page.
 
 ### References
 
-Any Links used to external sources should be suitably linked in the footnotes of the page, here we wish to provide our readers not to link away mid-sentence but to refer them at the end to the resource used in the body of the documentation afterwards.
+Any Links used to external sources should be suitably linked in the footnotes of the page. We do not wish to distract our readers mid-sentence with an external link, but rather to refer them to the resource used in the body of the documentation at the end.
 
 ## Next Steps
 
-Readers need to be told what to do next, it helps prime them as we move between pages,
-Here we begin by concluding what we have achieved on the page, then to inform them of what is coming up in the following page. This way their expectations are set and they are informed before hand.
+Readers need to be told what to do next; it helps prime them as they move between pages.
+Concluding what we have achieved on the page, then inform them of what is coming up in the following page. This way their expectations are set and they in the best possible state to continue.
 
 ## Footnotes
 
-Any referenced material used within the page needs to be adequately referenced at the bottom of each page, we would use the APA standard for citations of websites and content material that is placed on the page. Along side any additional authors comments on top of the reference.
+Any referenced material used within the page needs to be adequately referenced at the bottom of each page, using the APA standard for citations of websites and content material. These footnotes can also include any additional authors comments along with the reference.
