--- a/docs/000.template.md
+++ b/docs/000.template.md
@@ -2,11 +2,9 @@
 
 Each Component created within the Astro-ui monorepo needs to have its own accompanying set of documents to provide extra contextual information on the Component, addressing simple questions such as:
 
-- What it is
-- What it does
-- How it does it
-- How to use it
-- When and Where to use it
+- What does it do?
+- How it does it do it?
+- When and Where to use it ?
 
 These pages will have a shared Template, where FrontMatter tags are shared between the pages and their respective frontend Astro site.
 
@@ -16,69 +14,82 @@ This is the Template that would be placed at the top of the front-matter of each
 
 ```astro
 ---
-title: ""
-api_title: ""
-meta_title: ""
-description: "" 
-meta_description: ""
-page_number: 0
-next_page: ""
-previous_page: ""
-featured_image: ""
+title:
+    page : ""
+    api  : ""
+    meta : ""
+description: 
+    page: ""
+    meta: ""
+page: 
+    number   : 
+    next     : ''
+    previous : ''
+
 ---
 
 ```
 
-### So many Titles 😱
+### Explaining the Frontmatter 😱
 
-There is a slight method to this madness. The context of each page and their titles really depends on their location within the UI of the site.
+There is a slight method to this madness. Content may be king, but context is what crowns it.
 
-Here is an individual explaination of what 'title' does what exactly on the UI.
+*For contextual matters*, we structure our *frontmatter* into a YAML style format where we denounce all syntax for white-spaces.
 
-### `title:string` 
+Below contains a breakdown of each field
+### `title`
 
-This is the document `<title>`, a long form title that adequately informs of the pages content.
+Titles are important to the overall context to the page. In most cases pages are provided a `document.title` element which fills in the information to the browser. This is also picked up on the Search Engines too. But in some-cases as with documenting XElement, we have a couple of additional contextual titles that we wish to present to the UI.
 
-### `api_title:string`
+```YAML
+    page : "document.title" 
+    api  : "@title"
+    meta : "Open Graph Title"
+```
+### `description` 
 
-Our `api/` section contains pages with titles like `@do` and `@observers` etc. These are only used within our API section on the UI. This way we can place the methods and their special titles into the `<sidebar>` and `<headings>` of the UI.
+Page descriptions tend to be longer than their SEO driven counterparts. They are also addressing two seperate audiences.
+The `meta` property is described only to search engines and the Open Graph protocol where it is provided as a short abstract of the site. In contrast to the `page` description. Here we are needing to provide a longer from summary that would be able to be displayed on the site itself. This `page` description would also be used when indexing the page and its contents.
 
-### `meta_title:string`
+```YAML
+description: 
+    page: "Longer Form Summary - Used on the Site"
+    meta: "Short From Abstract - Used for OG & SEO"
+```
 
-SEO related title for our pages can vary on their content and other SEO factors. To separate this concern from interfering with the visual titles of the page, we have a specialized fields that pertain to helping empower the SEO narrative.
+### `page`
 
-### description:string
+There are other related information that we need to pass through to the UI from the page, this involves the Page `number` in terms of its ordering in amongst other pages in the folder. `next` and `previous` page links that would be used to direct the page navigation's.
 
-This is a long form description of the contents on the page, here we ought to encapsulate in a short abstract of what is on the page, what it seeks to convey and other pertaining unique bits of content that is valuable to the user.
+```yaml
+page: 
+    number   : 
+    next     : ''
+    previous : ''
+```
+------
 
-### meta_description:string
+## Writing Style guide
 
-This is a shorter more condensed form of the description field, used for empowering the SEO and meta content for the Social headers of the page. There is a limited number of words, ideally no more tha 50 words should be written in this short abstract. 
+We aim to make the writing in these documents speak to the end-user as if they are friendly and seeking assistance. It is a firm believe that if you are to help, try not to be a hinderance. We have took this to the application of the writing style in for these Documentation pages which lie herein.
 
-### page_number:number
+We write good english, for the sake of our readers. We try our best to write the content that is grammatically correct and concise. We accept that odd spelling and grammar mistakes will inevitably appear, all we ask is authors to be extra vigilant when it comes to writing content for the Documentation.
 
-Manually determining the order of each page, this would help save of sorting of pages in the UI. This way the determined order of the pages and how they appear is strictly controlled here in the frontmatter of each page.
+The narrative we project through the tonality of our words is not overly formal. There is a fine balance to talking to someone and talking at someone. We wish to only *help* our readers. This use of friendly warm encouragement is what we wish to express most when we are writing our content.
 
-### next_page:string
+What else can I add, ah yes, make sure to dot the t's and cross the i's. If you have any doubts please don't hesitate to reach out, we would always be here to help out.
 
-A Link to the next page to the current page in question. This is used to inform the `<next>` navigation button of the coming page to load.
+### Page Introduction
 
-### previous_page:string
+Lets introduce the content, short and sweet.
 
-A Link to the previous page to the current page in question. Again used to inform the `<prev>` page navigation.
+Here explain the background content that the reader needs before they proceeds through the rest of the page.
 
-### featured_image:string
+This introduction is the first *priming* stage for the reader, its where their cognitive and facultative processes are the most receptive. Don't seek to confuse them, merely introduce to them what the page is about, any relevant background knowledge that they need.
 
-A Link to a featured image, either located on a CDN or using a hyperlink to an online resource.
+From here the reader should be able to understand or discern what the context of the page they are about to read contains. This helps to reduce the cognitive overhead that readers face when it comes to digesting technical documentation.
 
-
-# Page Title
-
-Lets introduce the content, short and sweet. Only a couple of sentences long.
-
-Next up we seek to build on the previous paragraph by adding some key points of the document. 
-
-## Clear Titles
+### Clear Titles
 
 Titles convey more value than the text that follows.
 
@@ -91,10 +102,8 @@ By displaying the type associated with the property we can inform the reader of 
 ### Code Blocks
 
 Code blocks should be written using the `lang='astro || tsx' ` preference. Since our code examples for XElement would be written in Astro, we leverage Prism in the UI to help provide syntax support.
-
------
  
-## Articles
+### Articles
 
 Always use `-----` to help break up the page into smaller articles. This segmenting of information allows you to help develop further on concepts and also help maintain readability and structure of the page.
 
