--- a/docs/000.template.md
+++ b/docs/000.template.md
@@ -23,8 +23,8 @@ description:
     meta: ""
 page: 
     number   : 
-    next     : ''
-    previous : ''
+    next     : ""
+    previous : ""
 
 ---
 
@@ -59,7 +59,7 @@ description:
 
 ### `page`
 
-There are other related information that we need to pass through to the UI from the page, this involves the Page `number` in terms of its ordering in amongst other pages in the folder. `next` and `previous` page links that would be used to direct the page navigation's.
+There are other related information that we need to pass through to the UI from the page, this involves the Page `number` in terms of its ordering in amongst other pages in the folder, if no number is provided the pages would be sorted alphabetically. `next` and `previous` page links that would be used to direct the page navigation's.
 
 ```yaml
 page: 
